--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "build": "vite build",
     "build:lib": "vite build --mode lib",
     "preview": "vite preview",
+    "test": "vitest",
+    "test:run": "vitest run",
+    "test:coverage": "vitest run --coverage",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
   },
@@ -26,11 +29,17 @@
     "@storybook/addon-docs": "^9.1.6",
     "@storybook/addon-vitest": "^9.1.6",
     "@storybook/preact-vite": "^9.1.6",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/preact": "^3.2.4",
+    "@testing-library/user-event": "^14.6.1",
+    "@vitest/coverage-v8": "^3.2.4",
     "install": "^0.13.0",
+    "jsdom": "^27.0.0",
     "sass": "^1.92.1",
     "storybook": "^9.1.6",
     "typescript": "~5.8.3",
-    "vite": "^7.1.2"
+    "vite": "^7.1.2",
+    "vitest": "^3.2.4"
   },
   "dependencies": {
     "classnames": "^2.5.1"
