--- a/package.json
+++ b/package.json
@@ -1,21 +1,41 @@
 {
   "name": "ac-components",
   "version": "0.1.0",
+  "description": "A collection of reusable Preact components",
   "type": "module",
-  "main": "dist/ac-components.umd.js",
-  "module": "dist/ac-components.es.js",
+  "main": "dist/index.cjs.js",
+  "module": "dist/index.esm.js",
   "types": "dist/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.esm.js",
+      "require": "./dist/index.cjs.js"
+    },
+    "./styles": "./dist/index.css"
+  },
   "files": [
     "dist"
   ],
+  "keywords": [
+    "preact",
+    "components",
+    "ui",
+    "react",
+    "typescript"
+  ],
+  "author": "Alexis Cast",
+  "license": "MIT",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "build:lib": "vite build --mode lib",
+    "build": "rollup -c",
+    "build:lib": "rollup -c",
+    "build:vite": "vite build",
     "preview": "vite preview",
     "test": "vitest",
     "test:run": "vitest run",
     "test:coverage": "vitest run --coverage",
+    "prepublishOnly": "npm run build",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
   },
@@ -25,6 +45,9 @@
   "devDependencies": {
     "@chromatic-com/storybook": "^4.1.1",
     "@preact/preset-vite": "^2.10.2",
+    "@rollup/plugin-commonjs": "^28.0.6",
+    "@rollup/plugin-node-resolve": "^15.3.1",
+    "@rollup/plugin-typescript": "^12.1.4",
     "@storybook/addon-a11y": "^9.1.6",
     "@storybook/addon-docs": "^9.1.6",
     "@storybook/addon-vitest": "^9.1.6",
@@ -33,15 +56,15 @@
     "@testing-library/preact": "^3.2.4",
     "@testing-library/user-event": "^14.6.1",
     "@vitest/coverage-v8": "^3.2.4",
-    "install": "^0.13.0",
     "jsdom": "^27.0.0",
+    "rollup": "^4.52.4",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-postcss": "^4.0.2",
     "sass": "^1.92.1",
     "storybook": "^9.1.6",
     "typescript": "~5.8.3",
     "vite": "^7.1.2",
-    "vitest": "^3.2.4"
-  },
-  "dependencies": {
+    "vitest": "^3.2.4",
     "classnames": "^2.5.1"
   }
 }
