--- a/package.json
+++ b/package.json
@@ -56,15 +56,16 @@
     "@testing-library/preact": "^3.2.4",
     "@testing-library/user-event": "^14.6.1",
     "@vitest/coverage-v8": "^3.2.4",
+    "classnames": "^2.5.1",
     "jsdom": "^27.0.0",
     "rollup": "^4.52.4",
+    "rollup-plugin-copy": "^3.5.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.2",
     "sass": "^1.92.1",
     "storybook": "^9.1.6",
     "typescript": "~5.8.3",
     "vite": "^7.1.2",
-    "vitest": "^3.2.4",
-    "classnames": "^2.5.1"
+    "vitest": "^3.2.4"
   }
 }
